made fonts sizes larger for bigger screens, sorted alignment issues

--- a/css/question1.css
+++ b/css/question1.css
@@ -80,3 +80,53 @@ Styling for tech companies
     text-align: center;
     font-size: 2em;
 }
+
+/* TABLET CODE*/
+
+@media screen and (min-width: 768px) {
+    .left {
+        float: left;
+        width: 50%;
+    }
+    
+    .right {
+        float: right;
+        width: 50%;
+    }
+    
+    .row:after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+    
+    .responsive {
+        display: inline-block;
+        width: 50%;
+    }
+    
+    footer, #question {
+        content: "";
+        clear: both;
+        display: table;
+    }
+    
+    .chart {
+        background: url("http://cl.ly/QSpc/bg-chart.png");
+        width: 50%;
+        height: 320px;
+        margin-left: 25%;
+    }
+
+}
+
+/* DESKTOP CODE*/
+
+@media screen and (min-width: 1024px) {
+    
+    .responsive {
+        display: inline-block;
+        width: 24%;
+    }
+    
+}
